--- a/src/app/components/about/interests/DomainBlock.tailwind.css
+++ b/src/app/components/about/interests/DomainBlock.tailwind.css
@@ -2,7 +2,7 @@
 
 @layer components {
   .domain-block {
-    @apply space-y-4 opacity-50 transition-opacity duration-700;
+    @apply space-y-4 opacity-50 transition-opacity duration-700 p-8;
   }
 
   .active-scan .domain-block {
