--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -44,7 +44,7 @@ html, body {
 .article-title,
 label{
   font-family: var(--font-titles);
-  letter-spacing: 0.08em;
+  letter-spacing: clamp(0.02em, 0.6vw, 0.08em);
   color: var(--color-accent);
 }
 
